--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,9 @@
 # Set default behavior, in case users don't have core.autocrlf set.
 * text=auto
+
+#Make the textual files have the text setting, so things never have the wrong line endings.
+*.cs text
+*.xml text
+*.txt text
+*.yml text
+*.meta text
